<resources>
    <string name="app_name">DFECT</string>
    <string name="title_home">Logbook</string>
    <string name="title_dashboard">QR Generator</string>
    <string name="title_notifications">QR Scanner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--Log in hyperlinks -->
    <string name="sign_up">
        <a href="http://www.dfect.com/signup" style="color:red">Don\'t have an account yet? Sign Up</a>
    </string>
    <string name="forgot_password">
        <a href="http://www.dfect.com/forgotpassword" style="color:red">Forgot password?</a>
    </string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>